--- a/desktop-runner/pyproject.toml
+++ b/desktop-runner/pyproject.toml
@@ -7,6 +7,10 @@ name = "desktop-runner"
 version = "0.1.0"
 description = "Desktop runner skeleton"
 requires-python = ">=3.10"
+dependencies = [
+    "pillow>=10.0.0",
+    "pywinauto>=0.6.8",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
