--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "test": "vitest run"
   },
+  "dependencies": {
+    "@ai-rpa/web-runner": "file:../web-runner"
+  },
   "devDependencies": {
     "typescript": "^5.3.3",
     "vitest": "^1.5.0"
