--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -9,6 +9,7 @@
     "@ai-rpa/web-runner": "file:../web-runner"
   },
   "devDependencies": {
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.5.0"
   }
